--- a/index.html
+++ b/index.html
@@ -47,17 +47,21 @@
               <li
                 class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-[rgba(0,0,0,0.5)]"
               >
-                <a href="./catalog.html"> Ноутбуки Rikor  </a>
+                <a href="./pages/catalog.html"> Ноутбуки Rikor  </a>
               </li>
               <li
                 class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-[rgba(0,0,0,0.5)]"
               >
-                <a href="./catalog.html"> Ноутбуки Гравитон Ноутбуки Irbis  </a>
+                <a href="./pages/catalog.html">
+                  Ноутбуки Гравитон Ноутбуки Irbis 
+                </a>
               </li>
               <li
                 class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-[rgba(0,0,0,0.5)]"
               >
-                <a href="./catalog.html"> Ноутбуки iRU Ноутбуки F-Plus  </a>
+                <a href="./pages/catalog.html">
+                  Ноутбуки iRU Ноутбуки F-Plus 
+                </a>
               </li>
             </ul>
           </div>
@@ -547,11 +551,13 @@
               <div
                 class="flex max-md:flex max-md:items-center max-md:justify-center"
               >
-                <button
-                  class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
-                >
-                  В корзину
-                </button>
+                <a class="w-full" href="./pages/detail.html">
+                  <button
+                    class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
+                  >
+                    В корзину
+                  </button>
+                </a>
               </div>
             </div>
           </div>
@@ -587,11 +593,13 @@
               <div
                 class="flex max-md:flex max-md:items-center max-md:justify-center"
               >
-                <button
-                  class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
-                >
-                  В корзину
-                </button>
+                <a class="w-full" href="./pages/detail.html">
+                  <button
+                    class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
+                  >
+                    В корзину
+                  </button>
+                </a>
               </div>
             </div>
           </div>
