--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -369,11 +369,13 @@
                   <div
                     class="flex max-md:flex max-md:items-center max-md:justify-center"
                   >
-                    <button
-                      class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
-                    >
-                      В корзину
-                    </button>
+                    <a class="w-full" href="./detail.html">
+                      <button
+                        class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
+                      >
+                        В корзину
+                      </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -408,11 +410,13 @@
                   <div
                     class="flex max-md:flex max-md:items-center max-md:justify-center"
                   >
-                    <button
-                      class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
-                    >
-                      В корзину
-                    </button>
+                    <a class="w-full" href="./detail.html">
+                      <button
+                        class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
+                      >
+                        В корзину
+                      </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -448,11 +452,13 @@
                   <div
                     class="flex max-md:flex max-md:items-center max-md:justify-center"
                   >
-                    <button
-                      class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
-                    >
-                      В корзину
-                    </button>
+                    <a class="w-full" href="./detail.html">
+                      <button
+                        class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
+                      >
+                        В корзину
+                      </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -488,11 +494,13 @@
                   <div
                     class="flex max-md:flex max-md:items-center max-md:justify-center"
                   >
-                    <button
-                      class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
-                    >
-                      В корзину
-                    </button>
+                    <a class="w-full" href="./detail.html">
+                      <button
+                        class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
+                      >
+                        В корзину
+                      </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -528,11 +536,13 @@
                   <div
                     class="flex max-md:flex max-md:items-center max-md:justify-center"
                   >
-                    <button
-                      class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
-                    >
-                      В корзину
-                    </button>
+                    <a class="w-full" href="./detail.html">
+                      <button
+                        class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
+                      >
+                        В корзину
+                      </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -568,11 +578,13 @@
                   <div
                     class="flex max-md:flex max-md:items-center max-md:justify-center"
                   >
-                    <button
-                      class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
-                    >
-                      В корзину
-                    </button>
+                    <a class="w-full" href="./detail.html">
+                      <button
+                        class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
+                      >
+                        В корзину
+                      </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -608,11 +620,13 @@
                   <div
                     class="flex max-md:flex max-md:items-center max-md:justify-center"
                   >
-                    <button
-                      class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
-                    >
-                      В корзину
-                    </button>
+                    <a class="w-full" href="./detail.html">
+                      <button
+                        class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
+                      >
+                        В корзину
+                      </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -648,11 +662,13 @@
                   <div
                     class="flex max-md:flex max-md:items-center max-md:justify-center"
                   >
-                    <button
-                      class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
-                    >
-                      В корзину
-                    </button>
+                    <a class="w-full" href="./detail.html">
+                      <button
+                        class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
+                      >
+                        В корзину
+                      </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -688,11 +704,13 @@
                   <div
                     class="flex max-md:flex max-md:items-center max-md:justify-center"
                   >
-                    <button
-                      class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
-                    >
-                      В корзину
-                    </button>
+                    <a class="w-full" href="./detail.html">
+                      <button
+                        class="w-[100%] h-[44px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
+                      >
+                        В корзину
+                      </button>
+                    </a>
                   </div>
                 </div>
               </div>
