--- a/pages/detail.html
+++ b/pages/detail.html
@@ -40,7 +40,7 @@
 
           <div
             id="catalogModal"
-            class="absolute left-0 mt-2 w-48 bg-white shadow-lg rounded-lg overflow-hidden opacity-0 scale-95 transition-all duration-300 z-10"
+            class="absolute left-0 mt-2 w-48 bg-white shadow-lg rounded-lg overflow-hidden scale-95 transition-all duration-300 hidden"
           >
             <ul class="py-2">
               <li class="px-4 py-2 hover:bg-gray-100 font-semibold text-xl">
@@ -90,7 +90,7 @@
           <a href="tel:+84951504072"> Заказать звонок </a>
         </button>
         <div class="flex gap-5 ml-10">
-          <a href="#">
+          <a href="./search.html">
             <img src="../img/icons/search.svg" alt="Search" class="pl-2" />
             <p class="text-[13px] leading-none pt-[9px]">Поиск</p>
           </a>
