--- a/pages/news-details.html
+++ b/pages/news-details.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Moskow Sales Center | Contacts</title>
+    <title>Moskow Sales Center | News</title>
 
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link href="../index.css" rel="stylesheet" />
@@ -164,140 +164,62 @@
 
     <main
       id="#main"
-      class="max-w-[1294px] mx-auto px-4 pt-2 animate-fadeIn max-md:w-full"
+      class="max-w-[1294px] mx-auto px-4 pt-2 animate-fadeIn max-md:w-full grow-1"
     >
       <section class="w-full text-[#454545] mt-8 max-md:mt-1">
-        <a class="text-[#ababab]" href="../index.html">Главная</a> / Контакты
+        <a class="text-[#ababab]" href="../index.html">Главная</a> /
+        <a class="text-[#ababab]" href="./news.html">Новости</a> / Название
+        новости
       </section>
-      <section id="contacts" class="pb-16 pt-16 max-md:pt-6 max-md:pb-[150px]">
-        <div class="flex gap-10 pb-5 max-md:pb-6">
-          <div class="flex flex-col max-md:w-full">
-            <h3 class="text-[42px] pb-7 max-md:text-[20px] max-md:pb-4">
-              Контакты
-            </h3>
-            <div class="flex justify-between w-full">
-              <div class="w-full">
-                <div
-                  class="flex gap-48 max-md:flex-col max-md:gap-7 max-md:pb-10"
-                >
-                  <div>
-                    <div>
-                      <a
-                        href="+84951504072"
-                        class="text-sm pb-6 max-md:pb-7 block"
-                      >
-                        <p style="font-family: MyFontPro">Телефон</p>
-                        <p style="font-family: MyFontPro">8 (495) 150-40-72</p>
-                      </a>
-                      <a href="mailto:info@mossales.ru" class="text-sm">
-                        <p style="font-family: MyFontPro">Email</p>
-                        <p style="font-family: MyFontPro">info@mossales.ru</p>
-                      </a>
-                    </div>
-                  </div>
+      <section
+        id="contacts"
+        class="pb-6 pt-6 px-22 max-md:px-4 katalog_shadow rounded-[24px] mt-[50px] mb-8"
+      >
+        <h3 class="text-[42px] pb-7 max-md:text-[20px] max-md:pb-4 text-center">
+          Название новости
+        </h3>
+        <div class="flex flex-col items-center">
+          <img
+            src="../img/mobilenews.png"
+            class="w-auto md:h-[320px] max-md:[160px]"
+            alt=""
+          />
 
-                  <div>
-                    <div>
-                      <div class="text-sm pb-6">
-                        <p style="font-family: MyFontPro">График работы</p>
-                        <p style="font-family: MyFontPro">
-                          Пн - Пт:10.00 - 18.00
-                        </p>
-                      </div>
-                      <div class="text-sm">
-                        <p style="font-family: MyFontPro">Адрес</p>
-                        <p style="font-family: MyFontPro">
-                          Остаповский пр., 5, стр. 1, БЦ «Контакт»
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <form class="pt-4 w-full">
-                  <div class="pb-4">
-                    <input
-                      type="text"
-                      id="name"
-                      class="w-[650px] max-md:w-full h-[60px] pl-7 rounded-full border border-gray-300 input_linear"
-                      placeholder="Имя"
-                    />
-                  </div>
-
-                  <div class="pb-[15px]">
-                    <input
-                      type="tel"
-                      id="phone"
-                      class="w-[650px] max-md:w-full h-[60px] pl-7 rounded-full border border-gray-300 input_linear"
-                      placeholder="Телефон"
-                    />
-                  </div>
-
-                  <div class="pb-[22px]">
-                    <input
-                      type="email"
-                      id="email"
-                      class="w-[650px] max-md:w-full h-[60px] pl-7 input_linear"
-                      placeholder="Email"
-                    />
-                  </div>
-
-                  <div class="pb-4">
-                    <textarea
-                      id="comments"
-                      class="w-[650px] max-md:w-full h-[247px] pl-6 pt-6 rounded-full border border-gray-300 input_linear"
-                      rows="4"
-                      placeholder="Комментарии"
-                    ></textarea>
-                  </div>
-
-                  <div
-                    class="flex max-md:flex max-md:items-center max-md:justify-center"
-                  >
-                    <input
-                      type="submit"
-                      value="Отправить"
-                      class="w-[190px] h-[50px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto"
-                    />
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-          <div
-            class="w-[605px] h-[686px] rounded-[3.5em] mt-[16px] overflow-hidden max-md:hidden input_linear"
-          >
-            <div style="position: relative; overflow: hidden">
-              <a
-                href="https://yandex.uz/maps/213/moscow/?utm_medium=mapframe&utm_source=maps"
-                style="
-                  color: #eee;
-                  font-size: 12px;
-                  position: absolute;
-                  top: 0px;
-                "
-              ></a
-              ><a
-                href="https://yandex.uz/maps/213/moscow/?from=mapframe&ll=37.712057%2C55.722904&mode=usermaps&source=mapframe&um=constructor%3Ac1706fc50ca20d727f503278757469a476d073b1febd802e27d2904bbf49c1fe&utm_medium=mapframe&utm_source=maps&z=13"
-                style="
-                  color: #eee;
-                  font-size: 12px;
-                  position: absolute;
-                  top: 14px;
-                "
-                >Yandex Maps – transport, navigatsiya, joylarni qidirish</a
-              ><iframe
-                src="https://yandex.uz/map-widget/v1/?from=mapframe&ll=37.712057%2C55.722904&mode=usermaps&source=mapframe&um=constructor%3Ac1706fc50ca20d727f503278757469a476d073b1febd802e27d2904bbf49c1fe&utm_source=mapframe&z=13"
-                width="605"
-                height="686"
-                frameborder="1"
-                allowfullscreen="true"
-                style="position: relative"
-              ></iframe>
-            </div>
-          </div>
+          <p class="text-[#000] text-sm my-4 leading-6 text-left w-full">
+            Смартфон Apple iPhone 13 выполнен в компактном корпусе с
+            привлекательной розовой расцветкой и защищенной конструкцией
+            Смартфон Apple iPhone 13 выполнен в компактном корпусе с
+            привлекательной розовой расцветкой и защищенной конструкцией
+            Смартфон Apple iPhone 13 выполнен в компактном корпусе с
+            привлекательной розовой расцветкой и защищенной конструкцией
+            Смартфон Apple iPhone 13 выполнен в компактном корпусе с
+            привлекательной розовой расцветкой и защищенной конструкцией
+            Смартфон Apple iPhone 13 выполнен в компактном корпусе с
+            привлекательной розовой расцветкой и защищенной конструкцией
+            Смартфон Apple iPhone 13 выполнен в компактном корпусе с
+            привлекательной розовой расцветкой и защищенной конструкцией
+            Смартфон Apple iPhone 13 выполнен в компактном корпусе с
+            привлекательной розовой расцветкой и защищенной конструкцией
+            Смартфон Apple iPhone 13 выполнен в компактном корпусе с
+            привлекательной розовой расцветкой и защищенной конструкцией
+            Смартфон Apple iPhone 13 выполнен в компактном корпусе с
+            привлекательной розовой расцветкой и защищенной конструкцией
+            Смартфон Apple iPhone 13 выполнен в компактном корпусе с
+            привлекательной розовой расцветкой и защищенной конструкцией
+            Смартфон Apple iPhone 13 выполнен в компактном корпусе с
+            привлекательной розовой расцветкой и защищенной конструкцией
+            Смартфон Apple iPhone 13 выполнен в компактном корпусе с
+            привлекательной розовой расцветкой и защищенной конструкцией
+          </p>
         </div>
       </section>
+      <button
+        class="btn_linear mx-auto border py-3 px-[44px] max-md:py-2 w-max text-[20px] max-md:text-[10px] rounded-full relative flex gap-2 items-center mt-9 mb-8 max-md:mb-30"
+      >
+        <span class="text_linear text-transparent bg-clip-text">
+          Другие новости
+        </span>
+      </button>
     </main>
 
     <footer class="pb-8 pt-2 bg-[#F8F9FA] max-md:hidden">
