--- a/pages/news.html
+++ b/pages/news.html
@@ -40,7 +40,7 @@
 
           <div
             id="catalogModal"
-            class="absolute left-0 mt-2 w-48 bg-white shadow-lg rounded-lg overflow-hidden opacity-0 scale-95 transition-all duration-300 z-10"
+            class="absolute left-0 mt-2 w-48 bg-white shadow-lg rounded-lg overflow-hidden scale-95 transition-all duration-300 hidden"
           >
             <ul class="py-2">
               <li class="px-4 py-2 hover:bg-gray-100 font-semibold text-xl">
@@ -90,7 +90,7 @@
           <a href="tel:+84951504072"> Заказать звонок </a>
         </button>
         <div class="flex gap-5 ml-10">
-          <a href="#">
+          <a href="./search.html">
             <img src="../img/icons/search.svg" alt="Search" class="pl-2" />
             <p class="text-[13px] leading-none pt-[9px]">Поиск</p>
           </a>
@@ -164,7 +164,7 @@
 
     <main
       id="#main"
-      class="max-w-[1294px] mx-auto px-4 pt-2 animate-fadeIn max-md:w-full"
+      class="max-w-[1294px] mx-auto px-4 pt-2 animate-fadeIn max-md:w-full grow-1"
     >
       <section class="w-full text-[#454545] mt-8 max-md:mt-1">
         <a class="text-[#ababab]" href="../index.html">Главная</a> / Новости
@@ -176,7 +176,8 @@
         <div
           class="grid grid-cols-2 max-md:grid-cols-1 gap-x-20 gap-y-10 pb-5 max-md:pb-6"
         >
-          <div
+          <a
+            href="./news-details.html"
             class="grid grid-cols-5 gap-4 px-3 py-7 katalog_shadow rounded-[20px]"
           >
             <div class="col-span-2">
@@ -203,7 +204,7 @@
                 </span>
               </button>
             </div>
-          </div>
+          </a>
           <div
             class="grid grid-cols-5 gap-4 px-3 py-7 katalog_shadow rounded-[20px]"
           >
