add catefory page

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
               <li
                 class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-[rgba(0,0,0,0.5)]"
               >
-                <a href="./pages/catalog.html"> Ноутбуки Rikor  </a>
+                <a href="./pages/main-catalog.html"> Ноутбуки Rikor  </a>
               </li>
               <li
                 class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-[rgba(0,0,0,0.5)]"
               >
-                <a href="./pages/catalog.html">
+                <a href="./pages/main-catalog.html">
                   Ноутбуки Гравитон Ноутбуки Irbis 
                 </a>
               </li>
               <li
                 class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-[rgba(0,0,0,0.5)]"
               >
-                <a href="./pages/catalog.html">
+                <a href="./pages/main-catalog.html">
                   Ноутбуки iRU Ноутбуки F-Plus 
                 </a>
               </li>
@@ -198,7 +198,7 @@
                     <li class="text-[20px] pb-[6px]">Камеры 23 МП и 8 МП</li>
                     <li class="text-[20px] pb-9">32 ГБ встроенной памяти</li>
                   </ul>
-                  <a href="./pages/catalog.html">
+                  <a href="./pages/main-catalog.html">
                     <button
                       class="w-[132px] h-[50px] border-[1px] border-black rounded-3xl text-lg cursor-pointer"
                     >
