--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -47,13 +47,13 @@
                 Brand
               </li>
               <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer">
-                <a href="../pages/catalog.html"> Samsung </a>
+                <a href="../pages/main-catalog.html"> Samsung </a>
               </li>
               <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer">
-                <a href="../pages/catalog.html"> iPhone </a>
+                <a href="../pages/main-catalog.html"> iPhone </a>
               </li>
               <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer">
-                <a href="../pages/catalog.html"> Remdi </a>
+                <a href="../pages/main-catalog.html"> Remdi </a>
               </li>
             </ul>
           </div>
@@ -169,7 +169,7 @@
       <section class="w-full text-[#454545] mt-8 max-md:mt-1">
         <a class="text-[#ababab]" href="../index.html">Главная</a> / Каталог
       </section>
-      <section id="contacts" class="pb-16 pt-16 max-md:pt-6 max-md:pb-[150px]">
+      <section id="contacts" class="pb-8 pt-16 max-md:pt-6 max-md:pb-[20px]">
         <div class="flex gap-4">
           <aside
             id="filterPanel"
@@ -717,6 +717,14 @@
             </div>
           </div>
         </div>
+      </section>
+      <section class="pb-[90px]">
+        <p class="text-center text-xl">
+          Текст текст текст текст Текст текст текст текст Текст текст текст
+          текст Текст текст текст текст Текст текст текст текстТекст текст текст
+          текст Текст текст текст текст Текст текст текст текстТекст текст текст
+          текст Текст текст текст текст aa
+        </p>
       </section>
     </main>
 
