--- a/pages/catalogMobile.html
+++ b/pages/catalogMobile.html
@@ -47,13 +47,13 @@
                 Brand
               </li>
               <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer">
-                <a href="../pages/catalog.html"> Samsung </a>
+                <a href="../pages/main-catalog.html"> Samsung </a>
               </li>
               <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer">
-                <a href="../pages/catalog.html"> iPhone </a>
+                <a href="../pages/main-catalog.html"> iPhone </a>
               </li>
               <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer">
-                <a href="../pages/catalog.html"> Remdi </a>
+                <a href="../pages/main-catalog.html"> Remdi </a>
               </li>
             </ul>
           </div>
@@ -139,17 +139,19 @@
           <li
             class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-[rgba(0,0,0,0.5)]"
           >
-            <a href="./catalog.html"> Ноутбуки Rikor  </a>
+            <a href="./main-catalog.html"> Ноутбуки Rikor  </a>
           </li>
           <li
             class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-[rgba(0,0,0,0.5)]"
           >
-            <a href="./catalog.html"> Ноутбуки Гравитон Ноутбуки Irbis  </a>
+            <a href="./main-catalog.html">
+              Ноутбуки Гравитон Ноутбуки Irbis 
+            </a>
           </li>
           <li
             class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-[rgba(0,0,0,0.5)]"
           >
-            <a href="./catalog.html"> Ноутбуки iRU Ноутбуки F-Plus  </a>
+            <a href="./main-catalog.html"> Ноутбуки iRU Ноутбуки F-Plus  </a>
           </li>
         </ul>
       </section>
