--- a/pages/detail.html
+++ b/pages/detail.html
@@ -47,13 +47,13 @@
                 Brand
               </li>
               <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer">
-                <a href="../pages/catalog.html"> Samsung </a>
+                <a href="../pages/main-catalog.html"> Samsung </a>
               </li>
               <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer">
-                <a href="../pages/catalog.html"> iPhone </a>
+                <a href="../pages/main-catalog.html"> iPhone </a>
               </li>
               <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer">
-                <a href="../pages/catalog.html"> Remdi </a>
+                <a href="../pages/main-catalog.html"> Remdi </a>
               </li>
             </ul>
           </div>
@@ -168,7 +168,7 @@
     >
       <section class="w-full text-[#454545] mt-8 max-md:mt-1">
         <a class="text-[#ababab]" href="../index.html">Главная</a>
-        <a class="text-[#ababab]" href="./catalog.html">/ Смартфоны</a> /
+        <a class="text-[#ababab]" href="./main-catalog.html">/ Смартфоны</a> /
         Карточка товара
       </section>
       <section
