--- a/pages/news-details.html
+++ b/pages/news-details.html
@@ -47,13 +47,13 @@
                 Brand
               </li>
               <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer">
-                <a href="../pages/catalog.html"> Samsung </a>
+                <a href="../pages/main-catalog.html"> Samsung </a>
               </li>
               <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer">
-                <a href="../pages/catalog.html"> iPhone </a>
+                <a href="../pages/main-catalog.html"> iPhone </a>
               </li>
               <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer">
-                <a href="../pages/catalog.html"> Remdi </a>
+                <a href="../pages/main-catalog.html"> Remdi </a>
               </li>
             </ul>
           </div>
