--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -297,7 +297,7 @@
               </button>
             </div>
           </aside>
-          <div class="w-3/4 max-md:w-full" id="productList">
+          <div class="w-full max-md:w-full" id="productList">
             <div class="flex justify-between mb-4">
               <span>Выбранные продукты: <strong>60</strong></span>
               <!-- <div class="flex justify-center items-center gap-2">
