--- a/pages/manufactures-details.html
+++ b/pages/manufactures-details.html
@@ -185,7 +185,7 @@
             <img
               src="../img/manufacturers/item_235.svg"
               alt=""
-              class="w-full h-full"
+              class="w-full h-full object-contain"
             />
           </div>
 
