--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
       <div class="flex items-center max-md:hidden">
         <button
           id="animatedButton"
-          class="w-[154px] h-[48px] pb-[2px] bg-gradient-to-r to-blue-500 from-purple-500 text-white rounded-full cursor-pointer"
+          class="w-[154px] h-[48px] pb-[2px] bg-gradient-to-r to-blue-500 from-purple-500 text-white rounded-full cursor-pointer call-btn"
         >
-          <a href="tel:+84951504072"> Заказать звонок </a>
+          <a class="" href="#"> Заказать звонок </a>
         </button>
         <div class="flex gap-5 ml-10">
           <a href="./pages/search.html">
@@ -120,6 +120,64 @@
           </a>
         </div>
       </div>
+      <div
+        id="popupCallback"
+        class="fixed inset-0 bg-[#00000090] bg-opacity-70 flex items-center justify-center p-6 z-50 hidden"
+      >
+        <div
+          class="relative bg-white max-w-md w-full rounded-lg shadow-lg p-8 mx-4"
+        >
+          <!-- Close button -->
+          <button
+            id="closePopup"
+            class="absolute top-4 right-4 text-gray-600 hover:text-gray-900 focus:outline-none"
+            aria-label="Close popup"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M6 18L18 6M6 6l12 12"
+              />
+            </svg>
+          </button>
+
+          <h2 class="text-2xl font-semibold text-center mb-6">
+            Оставьте контакт и мы вам перезвоним!
+          </h2>
+
+          <form action="/" method="post" class="space-y-6">
+            <input
+              type="text"
+              name="name"
+              placeholder="Ваше имя"
+              required
+              class="w-full px-4 py-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-transparent"
+            />
+            <input
+              type="tel"
+              name="phone"
+              placeholder="Телефон"
+              required
+              class="w-full px-4 py-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-transparent"
+            />
+            <button
+              type="submit"
+              class="w-full py-3 rounded-md transition-colors duration-300 bg-gradient-to-r to-blue-500 from-purple-500 text-white"
+            >
+              Отправить!
+            </button>
+          </form>
+        </div>
+      </div>
+
       <div
         class="flex items-center max-md:fixed max-md:bottom-0 max-md:left-0 md:hidden w-full bg-[#f6f6f6] border border-t-[#C1C1C1] px-5 py-4 z-[100] justify-between"
       >
