--- a/pages/detail.html
+++ b/pages/detail.html
@@ -175,8 +175,8 @@
         id="contacts"
         class="pb-16 pt-16 max-md:pt-6 max-md:pb-[20px] gap-10"
       >
-        <div class="flex gap-4">
-          <aside class="w-1/4 bg-white p-4 rounded max-md:w-full max-md:hidden">
+        <div class="flex gap-4 justify-center">
+          <!-- <aside class="w-1/4 bg-white p-4 rounded max-md:w-full max-md:hidden">
             <div class="flex justify-between mb-4 items-center">
               <h2 class="text-sm font-bold mb-2">В реестре Минпромторга</h2>
             </div>
@@ -283,7 +283,7 @@
                 </li>
               </ul>
             </div>
-          </aside>
+          </aside> -->
           <div
             class="w-3/4 max-md:w-full grid grid-cols-2 max-md:grid-cols-1"
             id="productList"
@@ -667,7 +667,7 @@
       </section>
     </main>
     <div
-      class="flex justify-center bg-[#F6F6F6] border-t-1 border-[#CFCFCF] py-7 mb-20"
+      class="flex justify-center bg-[#F6F6F6] border-t-1 border-[#CFCFCF] py-7 mb-20 md:hidden"
     >
       <a href="./forma.html">
         <button
